# BibInvestigatorReport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  investigators.csv  run_example.sh  sample.bib
src/bib_investigator_report/: __init__.py  __main__.py  cli.py  report.py
