[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bib-investigator-report"
version = "0.1.0"
description = "Generate a LaTeX report of BibTeX citations per investigator per project-year."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Your Name"}
]
keywords = ["bibtex", "latex", "reporting", "publications"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[project.scripts]
bib-investigator-report = "bib_investigator_report.cli:main_cli"

[project.urls]
Homepage = "https://github.com/agdelma/BibInvestigatorReport"
Repository = "https://github.com/agdelma/BibInvestigatorReport"
Issues = "https://github.com/agdelma/BibInvestigatorReport/issues"

[tool.setuptools]
package-dir = {"" = "src"}
script-files = ["bin/bibreport"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
